change title color

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -77,3 +77,11 @@ picture {
 code {
 
 }
+
+// _typography.scss
+
+// 기존 스타일 정의
+
+.site-header .title {
+  color: rgb(255, 255, 85); // 원하는 색상으로 변경
+}
