--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -1,5 +1,7 @@
-{% for page in site.pages %}
-	{% if page.title and page.main_nav == true %}
-	<li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-	{% endif %}
-{% endfor %}
+<ul id="js-navigation-menu" class="navigation-menu show">
+	{% assign sorted_pages = site.pages | where: "main_nav", true | sort: "nav_order" %}
+	{% for page in sorted_pages %}
+	  <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+	{% endfor %}
+  </ul>
+  
