--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@ title : Page of
 ---
 
 <!-- 아래 타이틀 출력 부분이 제거된 상태 -->
-  <div class="post-header-container {% if page.cover %}has-cover{% endif %}" {% if page.cover %}style="background-image: url({{ page.cover | prepend: site.baseurl }});"{% endif %}>
+  <div class="post-header-container {% if page.cover %}has-cover{% endif %}" 
+  {% if page.cover %}style="background-image: url({{ page.cover | prepend: site.baseurl }});"{% endif %}>
   <div class="scrim {% if page.cover %}has-cover{% endif %}">
     <header class="post-header">
-      <h1 class="title">{{ page.title }}</h1>
       <p class="info">by <strong>{{ page.author }}</strong></p>
     </header>
   </div>
