--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -274,71 +274,78 @@ pre code.hljs {
 		width: 90%;
 	}
 	/*
-	*	Posts
-	*/
-	.post {
-		ul {
-			margin-bottom: 1em;
-		}
-		.post-header-container {
-			.scrim {
-				padding: 2em 1em 1em 1em;
-			}
-		}
-		.post-meta {
-			padding-bottom: 1em;
-		}
-		.post-content {
-			padding: 1em 0;
-		}
-		.tags {
-			font-size: 0.9em;
-		}
-		.rss {
-			margin: 1em 0 0 0;
-			@include span-columns(12);
-			@include media ($tablet) {
-				margin: 1em 0;
-				@include span-columns(6);
-			}
-		}
-		.share {
-			font-weight: bold;
-			margin: 0 0 1em 0;
-			@include span-columns(12);
-			@include media ($tablet) {
-				@include span-columns(6);
-				margin: 1em 0;
-				text-align: right;
-			}
-			a {
-				width: 1em;
-				padding: 0 0.25em;
-				text-decoration: none;
-			}
-		}
-		.disqus {
-			@include span-columns(12);
-		}
-		.post-navigation {
-			font-size: 0.9em;
-			display: block;
-			width: auto;
-			.prev-post {
-				display: block;
-				width: 50%;
-				float: left;
-				margin: 1em 0;
-			}
-			.next-post {
-				display: block;
-				width: 50%;
-				float: left;
-				margin: 1em 0;
-				text-align: right;
-			}
+*	Posts
+*/
+.post {
+	ul {
+		margin-bottom: 1em;
+	}
+	.post-header-container {
+		.scrim {
+			padding: 2em 1em 1em 1em;
 		}
 	}
+	.post-meta {
+		padding-bottom: 1em;
+	}
+	.post-content {
+		padding: 20px;
+		font-size: 1.2em;
+		line-height: 1.6;
+		color: #333;
+		max-width: 800px;
+		margin: 0 auto;
+	}
+	
+	.tags {
+		font-size: 0.9em;
+	}
+	.rss {
+		margin: 1em 0 0 0;
+		@include span-columns(12);
+		@include media ($tablet) {
+			margin: 1em 0;
+			@include span-columns(6);
+		}
+	}
+	.share {
+		font-weight: bold;
+		margin: 0 0 1em 0;
+		@include span-columns(12);
+		@include media ($tablet) {
+			@include span-columns(6);
+			margin: 1em 0;
+			text-align: right;
+		}
+		a {
+			width: 1em;
+			padding: 0 0.25em;
+			text-decoration: none;
+		}
+	}
+	.disqus {
+		@include span-columns(12);
+	}
+	.post-navigation {
+		font-size: 0.9em;
+		display: block;
+		width: auto;
+		.prev-post {
+			display: block;
+			width: 50%;
+			float: left;
+			margin: 1em 0;
+		}
+		.next-post {
+			display: block;
+			width: 50%;
+			float: left;
+			margin: 1em 0;
+			text-align: right;
+		}
+	}
+}
+
 	/*
 	*	Pages
 	*/
