--- a/css/main.scss
+++ b/css/main.scss
@@ -16,12 +16,12 @@
 
 
 // series 별 서브 타이틀 설정하기
-.bigdata-subtitle {
-  color: orange !important;
-}
-
 .docker-subtitle {
   color: rgb(27, 120, 196) !important;
+}
+
+.koreatimes-subtitle {
+  color: steelblue !important;
 }
 
 .subtitle {
